test/mlir/broadcast_bad_case_4.mlir.stderr
test/mlir/broadcast_bad_case_4.mlir:3:10: error: 'colgm.broadcast' op input rank 3 > output rank 2
    %0 = colgm.broadcast %arg {target_shape = [3, 4]} : tensor<2x3x4xf32> -> tensor<3x4xf32>
         ^
test/mlir/broadcast_bad_case_4.mlir:3:10: note: see current operation: %0 = "colgm.broadcast"(%arg0) {target_shape = [3, 4]} : (tensor<2x3x4xf32>) -> tensor<3x4xf32>
